Ignore Unity user settings.

--- a/.gitignore
+++ b/.gitignore
@@ -74,7 +74,8 @@ Thumbs.db
 
 
 ### New stuff for the Quoke project
-## Exclude plugins and purchased assets
+# Unity user settings
+EditorUserSettings.asset
 # JetBrains Rider project file
 .idea/
 # Emacs backup files
